--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,34 @@
 /* RESET */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* stile generale della pagina, font e colore di sfondo */
+body {
+  font-family: sans-serif;
+  background-color: rgba(182, 181, 181, 0.733);
+}
+/* LAYOUT: contenitore centrale che racchiude tutto il contenuto */
+.conteiner {
+  width: 70%;
+  margin: 50px auto;
+}
 
-/* Utlities */
+/* sezione superiore con logo e titolo  */
+header {
+  background-color: white;
+  height: 80px;
+  padding: 10px;
+}
 
-/* Layout */
+header h1 {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+header img {
+  vertical-align: middle;
+}
